--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ Header Style
   letter-spacing: 1.5px;
   font-weight: 300;
   font-size: 16px;
-  padding: 23px 5px 0px;
+  padding: 10px 15px;
   line-height: 30px;
   color: white;
   opacity: 0.5;
@@ -92,7 +92,6 @@ Welcome Modal
   width: 500px;
   max-width: 80%;
 }
-
 
 .modal-header {
   display: flex;
@@ -133,8 +132,6 @@ Welcome Modal
   z-index: 8999;
 }
 
-
-
 /* =================
 Grid System 1 Style
 ===================*/
@@ -152,7 +149,7 @@ Grid System 1 Style
   letter-spacing: 2px;
   font-size: 20px;
   text-transform: uppercase;
-  padding: 0px 30px 0px;
+  padding: 10px 15px;
   line-height: 1.75rem;
   color: white;
   transition: opacity 0.7s;
@@ -184,7 +181,7 @@ Grid System 1 Style
   position: fixed;
   letter-spacing: 2px;
   font-size: 24px;
-  padding: 0px 0px 0px 0px;
+  padding: 10px 15px;
   color: white;
   transition: opacity 0.7s;
   z-index: 7000;
@@ -1045,7 +1042,7 @@ Screen Sizes
     letter-spacing: 2px;
     font-size: 20px;
     text-transform: uppercase;
-    padding: 0px 30px 0px;
+    padding: 10px 15px;
     line-height: 1.75rem;
     color: white;
     transition: opacity 0.7s;
@@ -1062,7 +1059,7 @@ Screen Sizes
     letter-spacing: 2px;
     font-size: 24px;
     text-transform: uppercase;
-    padding: 0px 30px 0px;
+    padding: 10px 15px;
     line-height: 1em;
     color: white;
     transition: opacity 0.7s;
@@ -1078,7 +1075,7 @@ Screen Sizes
     font-weight: 100;
     font-style: normal;
     font-size: 18px;
-    padding: 10px 30px 0px;
+    padding: 10px 15px;
     line-height: 30px;
     color: white;
     transition: opacity 0.7s;
