--- a/style.css
+++ b/style.css
@@ -1568,8 +1568,8 @@ Screen Sizes
 }
 
 @media (max-width: 480px) {
-  
   .modal {
+    width: 80vw;
     max-width: 90%;
     text-align: center;
   }
