--- a/style.css
+++ b/style.css
@@ -1015,10 +1015,9 @@ Grid System 1 Style
 
 .Train.active {
   will-change: transform;
+  -webkit-animation: Trainmove 20s linear;
   animation: Trainmove 20s linear;
   animation-fill-mode: forwards;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
   animation-play-state: running;
   float: left;
   opacity: 1;
@@ -1028,11 +1027,13 @@ Grid System 1 Style
   0% {
     transform: translate3d(130%, 0px, 0px);
     -webkit-transform: translate3d(130%, 0px, 0px);
+    -moz-transform: translate3d(130%, 0px, 0px);
   }
 
   100% {
     -webkit-transform: translate3d(-100%, 0px, 0px);
     transform: translate3d(-100%, 0px, 0px);
+    -moz-transform: translate3d(-100%, 0px, 0px);
   }
 }
 
@@ -1301,16 +1302,16 @@ Screen Sizes
   .Train {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
-    animation: Trainmovesml 5s ease-in 4s;
-    -webkit-animation: Trainmovesml 5s ease-in 4s;
+    animation: Trainmovesml 7s ease-in 8s;
+    -webkit-animation: Trainmovesml 7s ease-in 8s;
     animation-fill-mode: forwards;
     opacity: 0;
   }
   .Train2 {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
-    animation: Train2movesml 8s linear;
-    -webkit-animation: Train2movesml 8s linear;
+    animation: Train2movesml 10s linear 4s;
+    -webkit-animation: Train2movesml 10s linear 4s;
     animation-fill-mode: forwards;
     opacity: 0;
   }
