--- a/style.css
+++ b/style.css
@@ -94,13 +94,14 @@ Welcome Modal
   );
   width: 70vw;
   max-width: 80%;
-  text-align: center;
+  max-height: 90%;
 }
 
 .modal-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px 20px;
 }
 
 .modal-header .close-button {
@@ -114,13 +115,14 @@ Welcome Modal
 }
 
 .modal-welcome {
-  padding: 10px 15px;
+  overflow: scroll; 
+  height: calc(90vh - 100px);
   font-family: Helvetica;
   letter-spacing: 1.5px;
   font-weight: 100;
   font-style: normal;
   font-size: 18px;
-  padding: 10px 15px;
+  padding: 10px 20px;
   line-height: 30px;
   color: white;
   transition: opacity 0.7s;
@@ -142,7 +144,7 @@ Welcome Modal
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 1);
   pointer-events: all;
   z-index: 8999;
 }
@@ -228,6 +230,19 @@ Grid System 1 Style
   transition: opacity 0.7s;
   margin-top: 5px;
   padding: 0px 15px;
+}
+
+.modalText {
+  font-family: Helvetica;
+  letter-spacing: 1.8px;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 28px;
+  color: white;
+  transition: opacity 0.7s;
+  margin-top: 5px;
+  padding: 0px 15px 0px 0px;
 }
 
 #TextBody:hover {
@@ -1108,7 +1123,7 @@ Screen Sizes
     transition: opacity 0.7s;
   }
   .modal-welcome {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 20px;
   }
 
@@ -1188,13 +1203,7 @@ Screen Sizes
     padding: 0px 5px;
   }
 
-  .modal-welcome {
-    letter-spacing: 1.2px;
-    font-weight: 100;
-    font-style: normal;
-    font-size: 12px;
-    line-height: 14px;
-  }
+
   #gridsystem1 #RadiationText {
     width: 40vw;
     top: 5vw;
@@ -1408,11 +1417,7 @@ Screen Sizes
   }
   .modal-welcome {
     padding: 5px 10px;
-    letter-spacing: 1px;
-    font-weight: 100;
-    font-style: normal;
-    font-size: 10px;
-    line-height: 11px;
+ 
   }
 
   #gridsystem1 #RadiationText {
@@ -1579,7 +1584,6 @@ Screen Sizes
   .modal {
     width: 85vw;
     max-width: 90%;
-    text-align: center;
   }
   .sun {
     width: 40vw;
